fixed some layout issues

--- a/styles/default/style.css
+++ b/styles/default/style.css
@@ -198,7 +198,7 @@ fieldset.submit-buttons {
 	border-left: 1px solid #d2ebe8;
 	font-size: 14px;
 	font-family: Verdana, "Helvetica", sans-serif;
-	text-align: right;
+	text-align: left;
 	padding: 4px;
 }
 
